add chinese language

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "settings": "Настройки",
   "sound": "Звук отклика",
-  "language": "Язык",
+  "language": "Выберите язык",
   "explore": "Исследовать",
 
   "mercury": "Меркурий",
