--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
   "settings": "Settings",
   "sound": "Sound",
-  "language": "Language",
+  "language": "Choose language",
   "explore": "Explore",
 
   "mercury": "Mercury",
