add translation for settings and editor

--- a/static/locales/ar.json
+++ b/static/locales/ar.json
@@ -19,5 +19,8 @@
 
   "mass": "الكتلة",
   "velocity": "السرعة",
-  "radius": "نصف القطر"
+  "radius": "نصف القطر",
+  "texture": "نسيج",
+  "reset_texture": "إعادة تعيين النسيج",
+  "view_mode": "وضع العرض"
 }
