--- a/static/locales/fr.json
+++ b/static/locales/fr.json
@@ -19,5 +19,8 @@
 
   "mass": "Masse",
   "velocity": "Vitesse",
-  "radius": "Rayon"
+  "radius": "Rayon",
+  "texture": "Texture",
+  "reset_texture": "Réinitialiser la texture",
+  "view_mode": "Mode d'affichage"
 }
