--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -19,5 +19,8 @@
 
   "mass": "Масса",
   "velocity": "Скорость",
-  "radius": "Радиус"
+  "radius": "Радиус",
+  "texture": "Текстура",
+  "reset_texture": "Сброс текстуры",
+  "view_mode": "Режим отображения"
 }
